# syndication_format

./: Cargo.toml  README.md
benches/: escape_benchmark.rs
benchmarks/: Cargo.toml
benchmarks/src/: main.rs
src/: atom.rs  atom_xml.rs  attributes.rs  common.rs  entry.rs  error.rs  escape.rs  feed.rs  lib.rs  metadata.rs  serializer.rs  utils.rs  writer.rs
src/atom/: entry.rs  feed.rs  metadata.rs
src/atom_xml/: builder.rs  impls.rs
src/common/: attributes.rs  escape.rs  timestamp.rs
src/serializer/: formatter.rs
src/utils/: byte_search.rs  name_check.rs  xml_name_token.rs
src/utils/byte_search/: avx2_search.rs  avx512_search.rs  swar_search.rs
src/writer/: indented_writer.rs
tests/: atom_xml.rs  attributes.rs  escape_xml.rs  serializer.rs  timestamp.rs
