[package]
name = "atom_syndication_format"
version = "0.1.0"
edition = "2021"
homepage = "https://github.com/SuperioOne/atom_syndication_format"
repository = "https://github.com/SuperioOne/atom_syndication_format"

[features]
default = ["std"]
avx512 = []
std = []

[dependencies]

[dev-dependencies]
criterion = { version = "0.5" }

[[bench]]
name = "escape_benchmark"
harness = false
